<resources>
    <string name="app_name">ParkAtOSU</string>
    <string name="account_button">Account</string>
    <string name="park_button">Go Park</string>
    <string name="set_parked_button">Set Parked</string>
    <string name="logout_button">Logout</string>
    <string name="main_menu_header">Main Menu</string>
    <string name="title_activity_where_to">Map</string>
    <string name="title_activity_directions">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Related to account menu -->
    <string name="address_header">Address</string>
    <string name="permits_header">Permits</string>
    <string name="my_spot_header">My Spot</string>
    <string name="edit_account_button">Edit Account</string>
    <string name="edit_account_save">Save</string>
    <string name="address_text_view" />

    <string name="no_address">No address found.</string>
    <string name="no_osu_permit">No permit found.</string>
    <string name="no_spot">No spot found.</string>



    <string name="logged_out">Logged Out.</string>
    <string name="set_location_button">Set Location</string>
    <string name="World">World</string>
    <string name="notifications_button">Notifications</string>
    <string name="notifications_subscribe">Set Notifications</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>
