<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_header"
        android:textAllCaps="true"
        android:textSize="24sp"/>
    <Button
        android:id="@+id/account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/account_button"/>

    <Button
        android:id="@+id/park_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/park_button"/>

    <Button
        android:id="@+id/set_parked_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_parked_button"/>

    <Button
        android:id="@+id/notifications_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications_button"/>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_button"/>

</LinearLayout>
